header e footer home

--- a/index.html
+++ b/index.html
@@ -4,11 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/svg" href="./Assets/bee-svgrepo-com-1.svg">
     <title>Rotas de ônibus</title>
 </head>
 
 <body>
-    
+    <header>
+        <div>
+            <img src="./Assets/bee-origami-paper-svgrepo-com.svg" alt="abelha de origami" height="32">
+            <h1>Busbus</h1>
+        </div>
+            
+        <nav class="menu">
+             <ul> <!-- Menu de navegação -->
+                 <li><a href="./index.html">Home</a></li>
+                 <li><a href="#">Rotas</a></li>
+                 <li><a href="#">História</a></li>
+                 <li><a href="#">Cartão</a></li>
+                 <li><a href="#">Transparência</a></li>
+             </ul>
+        </nav>
+    </header>
+
+    <!-- CONTEÚDO DA PÁGINA HOME -->
+
+    <!-- FIM DO CONTEÚDO DA PÁGINA HOME -->
+
+    <footer>
+        <div id="logo-footer">
+            <img src="./Assets/bee-svgrepo-com-2.svg" alt="abelhinha" height="32">
+            <h2>Busbus</h2>
+        </div>
+        <nav class="menu-footer">
+            <h3>Links rápidos</h3>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li><a href="#">Rotas</a></li>
+                 <li><a href="#">História</a></li>
+                 <li><a href="#">Cartão</a></li>
+                 <li><a href="#">Transparência</a></li>
+            </ul>
+        </nav>
+        <div class="info-footer">
+            <h3>Mini Projeto - Desenvolvimento Web</h3>
+            <h4>Grupo:</h4>
+            <p>
+                Bruna Scarpelli, Felipe Ottoni, Gustavo Kis, Letícia Almeida e Ricardo Suzuki.
+            </p>
+        </div>
+    </footer>
+    </footer>
 </body>
 
 </html>
