--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+
     <link rel="shortcut icon" type="imagex/svg" href="./Assets/bee-svgrepo-com-1.svg">
     <title>Rotas de ônibus</title>
 </head>
 
 <body>
     <header>
-        <div>
-            <img src="./Assets/bee-origami-paper-svgrepo-com.svg" alt="abelha de origami" height="32">
-            <h1>Busbus</h1>
+        <div id="logo">
+            <div>
+                <img src="./Assets/bee-origami-paper-svgrepo-com.svg" alt="abelha de origami" height="32">
+            </div>
+
+            <div>
+                <h1>Busbus</h1>
+            </div>
         </div>
             
         <nav class="menu">
