--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             </ul>
         </nav>
         <div class="info-footer">
-            <h3>Mini Projeto - Desenvolvimento Web</h3>
+            <h3>Mini Projeto 1 <br> Desenvolvimento Web</h3>
             <h4>Grupo:</h4>
             <p>
                 Bruna Scarpelli, Felipe Ottoni, Gustavo Kis, Letícia Almeida e Ricardo Suzuki.
             </p>
         </div>
     </footer>
-    </footer>
+
 </body>
 
 </html>
