header e footer home e cadastro

--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
             </ul>
         </nav>
         <div class="info-footer">
-            <h3>Mini Projeto 1 <br> Desenvolvimento Web</h3>
-            <h4>Grupo:</h4>
+            <h3>Universidade Federal de São Carlos <br> Campus Sorocaba</h3>
+
             <p>
+                Desenvolvimento Web <br>
+                Mini Projeto 1 <br> 
+                Grupo: <br>
                 Bruna Scarpelli, Felipe Ottoni, Gustavo Kis, Letícia Almeida e Ricardo Suzuki.
             </p>
         </div>
