--- a/cadastro.html
+++ b/cadastro.html
@@ -37,6 +37,37 @@
         </nav>
     </header>
 
-    
+    <!-- CONTEÚDO DO CADASTRO DE ITENS-->
+
+    <!-- FIM DO CONTEÚDO DO CADASTRO DE ITENS-->
+
+    <footer>
+        <div id="logo-footer">
+            <img src="./Assets/bee-svgrepo-com-2.svg" alt="abelhinha" height="60">
+            <h2>Busbus</h2>
+        </div>
+        <nav class="menu-footer">
+            <h3>Links rápidos</h3>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li><a href="#">Rotas</a></li>
+                 <li><a href="#">História</a></li>
+                 <li><a href="#">Cartão</a></li>
+                 <li><a href="#">Transparência</a></li>
+            </ul>
+        </nav>
+        <div class="info-footer">
+            <h3>Universidade Federal de São Carlos <br> Campus Sorocaba</h3>
+
+            <p>
+                Desenvolvimento Web <br>
+                Mini Projeto 1 <br> 
+                Grupo: <br>
+                Bruna Scarpelli, Felipe Ottoni, Gustavo Kis, Letícia Almeida e Ricardo Suzuki.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
