--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         <nav class="menu">
              <ul> <!-- Menu de navegação -->
                  <li><a href="./index.html">Home</a></li>
-                 <li><a href="#">Rotas</a></li>
+                 <div class="dropdown">
+                    <button class="dropbtn">Rotas</button>
+                    <div class="dropdown-content">
+                      <a href="#">Itinerários</a>
+                      <a href="#">Cadastro de itinerários</a>
+                    </div>
+                  </div> 
                  <li><a href="#">História</a></li>
                  <li><a href="#">Cartão</a></li>
                  <li><a href="#">Transparência</a></li>
