--- a/cadastro.html
+++ b/cadastro.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/cadastro.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="./Assets/bee-svgrepo-com-1.svg">
     <title>Cadastro</title>
@@ -29,7 +30,13 @@
         <nav class="menu">
              <ul> <!-- Menu de navegação -->
                  <li><a href="./index.html">Home</a></li>
-                 <li><a href="#">Rotas</a></li>
+                 <div class="dropdown">
+                    <button class="dropbtn">Rotas</button>
+                    <div class="dropdown-content">
+                      <a href="#">Itinerários</a>
+                      <a href="./cadastro.html">Cadastro de itinerários</a>
+                    </div>
+                  </div> 
                  <li><a href="#">História</a></li>
                  <li><a href="#">Cartão</a></li>
                  <li><a href="#">Transparência</a></li>
@@ -38,7 +45,9 @@
     </header>
 
     <!-- CONTEÚDO DO CADASTRO DE ITENS-->
+    <section>
 
+    </section>
     <!-- FIM DO CONTEÚDO DO CADASTRO DE ITENS-->
 
     <footer>
