criacao da page itinerario

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             
         <nav class="menu">
              <ul> <!-- Menu de navegação -->
-                 <li><a href="./index.html">Home</a></li>
+                 <li><a href="#">Home</a></li>
                  <div class="dropdown">
                     <button class="dropbtn">Rotas</button>
                     <div class="dropdown-content">
-                      <a href="#">Itinerários</a>
+                      <a href="./itinerarios.html">Itinerários</a>
                       <a href="./cadastro.html">Cadastro de itinerários</a>
                     </div>
                   </div> 
