--- a/itinerarios.html
+++ b/itinerarios.html
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/cadastro.css">
+    <link rel="stylesheet" href="./styles/itinerario.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="./Assets/bee-svgrepo-com-1.svg">
-    <title>Cadastro</title>
+    <title>Itinerario</title>
 </head>
 <body>
     <header>
@@ -33,8 +33,8 @@
                  <div class="dropdown">
                     <button class="dropbtn">Rotas</button>
                     <div class="dropdown-content">
-                      <a href="./itinerarios.html">Itinerários</a>
-                      <a href="#">Cadastro de itinerários</a>
+                      <a href="#">Itinerários</a>
+                      <a href="./cadastro.html">Cadastro de itinerários</a>
                     </div>
                   </div> 
                  <li><a href="#">História</a></li>
@@ -44,12 +44,12 @@
         </nav>
     </header>
 
-    <!-- CONTEÚDO DA PÁGINA CADASTRO DE ITENS-->
+    <!-- CONTEÚDO DA PÁGINA ITINERARIO -->
     <section>
-        <h1>Cadastro de Itinerário</h1>
-
+        <h1>Itinerários</h1>
+        
     </section>
-    <!-- FIM DO CONTEÚDO DA PÁGINA CADASTRO DE ITENS-->
+    <!-- FIM DO CONTEÚDO DA PÁGINA DE ITINERÁRIOS -->
 
     <footer>
         <div id="logo-footer">
